# try_oauth_educational

./: .env-example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
service/: __main__.py  config.py
service/endpoints/: home_handler.py  open_handlers.py  private_handlers.py  token_handlers.py
service/exceptions/: exceptions.py
service/oauth/: headers.py  schemas.py  token_manager.py  tokens.py
service/schemas/: schemas.py
service/utils/: fake_db.py  utils.py
tests/: conftest.py  test_endpoints.py
