[tool.poetry]
name = "jwt-01"
version = "0.1.0"
description = ""
authors = ["alina1412 <alina1412>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
requests = "^2.32.3"
httpx = "^0.28.1"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
poetry = "^2.0.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
